su inserimento prestito aggiunto check su tecnico attivo - su inserimento intervento aggiunti tipi ingaggio e invertite su report xls colonna note con tipo ingaggio - su modifica intervento il campo tecnico non viene più aggiornato ad ogni modifica ma resta quello di creazione

--- a/static/admin/css/base.css
+++ b/static/admin/css/base.css
@@ -2,7 +2,7 @@
     DJANGO Admin styles
 */
 
-@import url(fonts.css);
+/*@import url(fonts.css);*/
 
 body {
     margin: 0;
@@ -366,7 +366,7 @@ table thead th.sorted .sortoptions a.sortremove {
 }
 
 table thead th.sorted .sortoptions a.sortremove:after {
-    content: '\\';
+    /*content: "\\";*/
     position: absolute;
     top: -6px;
     left: 3px;
