--- a/static/admin/css/base.css
+++ b/static/admin/css/base.css
@@ -2,13 +2,13 @@
     DJANGO Admin styles
 */
 
-/*@import url(fonts.css);*/
+@import url(fonts.css);
 
 body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-family: "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
+    font-family: "K2D", "Montserrat","Exo 2","Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
     color: #333;
     background: #fff;
 }
