--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,4 +1,6 @@
-{% load i18n static %}<!DOCTYPE html>
+{% load i18n static %}
+{% load staticfiles %}
+<!DOCTYPE html>
 {% get_current_language as LANGUAGE_CODE %}{% get_current_language_bidi as LANGUAGE_BIDI %}
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
 <head>
@@ -32,7 +34,7 @@
 <!-- Fine importazioni per Tooltipster -->
 <script type="text/javascript" src="/static/crea_pdf_prestito.js"></script>
 
-
+<link href="https://fonts.googleapis.com/css?family=Exo+2:200,400,600|K2D:200,400,600|Montserrat:200,400,600" rel="stylesheet">
 
 
 </head>
