aggiunto popup su inserimento ok/ko

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -62,6 +62,7 @@
     <script type="text/javascript" src="/static/double_click_prevent_input.default.js"></script>
     <script type="text/javascript" src="/static/double_click_prevent_input_addanother.js"></script>
     <script type="text/javascript" src="/static/double_click_prevent_input_continue.js"></script>
+    <script type="text/javascript" src="/static/popup_after_click.js"></script>
 
 
 </head>
